# Ragent

./: .env.example  .gitignore  CODEX.md  Dockerfile  README.md  alembic.ini  docker-compose.ci.yml  docker-compose.yml  interview-preparation.md  prometheus.yml  pyproject.toml  start.py  start_worker.py
alembic/: env.py
alembic/versions/: 1796e6748184_v16_add_workflow_tables.py  b7e79684b9d2_v20_add_research_tables.py
backend/: config.py  schemas.py
backend/agent/: brain.py  chart_generator.py  data_analyst.py  mcp_client.py  model_router.py  multimodal_specialist.py  orchestrator.py  query_profiler.py  tool_retriever.py  tools.py  web_searcher.py
backend/api/: app.py  routes.py
backend/auth/: dependencies.py  jwt_handler.py  models.py  routes.py
backend/billing/: audit.py  middleware.py  models.py  (+3 more)
config/: weight_matrix.yaml
docs/: codex-3day-runbook.md
frontend/: index.html  script.js  style.css
scripts/: benchmark_incremental.py  ci_evaluation.sh  generate_report.py  graph_topology_stats.py  grid_search_rrf.py  run_ab_evaluation.py  run_adaptive_evaluation.py  run_benchmark.py  run_community_clustering.py  run_entity_resolution.py  run_evaluation.py  run_load_test.py  test_mcp_e2e.py  test_mcp_server.py
tests/: conftest.py  golden_dataset.json  test_audit.py  test_auth_middleware.py  test_auth_models.py  test_billing_integration.py  test_data_analyst.py  test_doc_lifecycle.py  test_dynamic_rrf.py  test_evaluation.py  test_evidence_graph.py  test_fingerprint.py  test_graph_reasoning.py  test_graph_utility_estimator.py  test_incremental_clustering.py  test_incremental_upload.py  test_jwt_handler.py  test_load_monitor.py  test_memory.py  test_privilege_escalation.py  test_query_profiler.py  test_rate_limiter.py  test_research.py  test_retrieval_planner.py  test_tenant_isolation_milvus.py  test_tenant_isolation_mysql.py  test_tenant_isolation_neo4j.py  test_token_tracker.py  test_v10_ontology.py  test_workflow_executor.py  test_workflow_planner.py  test_workflow_tool_runtime.py
(+127 files in other folders)
