[project]
name = "Ragent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "pymilvus>=2.5.0",
    "protobuf>=5.26",
    "python-multipart>=0.0.9",
    "pydantic>=2.8.0",
    "langchain>=0.2.14",
    "langchain-core>=0.2.37",
    "langchain-community>=0.2.12",
    "langchain-text-splitters>=0.2.2",
    "langchain-openai>=0.1.22",
    "langgraph>=0.2.31",
    "pypdf>=4.3.1",
    "docx2txt>=0.8",
    "unstructured",
    "openpyxl",
    "tabulate",
    "msoffcrypto-tool",
    "redis>=5.0,<6.0",
    "psycopg2-binary>=2.9.11",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<5.0",
    "PyJWT>=2.8.0",
    "sentence-transformers>=5.3.0",
    "torch>=2.11.0",
    "python-jose[cryptography]>=3.5.0",
    "pymysql>=1.1.2",
    "python-docx>=1.2.0",
    "pandas>=3.0.1",
    "tavily-python>=0.5.0",
    "neo4j>=6.2.0",
    "networkx>=3.6.1",
    "python-louvain>=0.16",
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ragas>=0.2.0,<0.3.0",
    "datasets>=2.19.0",
    "matplotlib>=3.8.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
    "pybreaker>=0.8.0",
    "tenacity>=8.3.0",
    "numpy>=1.26.0",
    "alembic>=1.13.0",
    "mcp>=1.0.0",
    "aiohttp>=3.9.0",
    "arq>=0.26.0",
]

[tool.setuptools.packages.find]
include = ["backend", "backend.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "evaluation: 评测相关测试（需要真实 Milvus/LLM 连接）",
    "asyncio: asyncio-based async tests",
]

[project.optional-dependencies]
study = [
    "langchain-classic>=0.2.0",
    "chromadb>=0.5.5",
    "bilibili-api-python>=17.0.0",
]
